# nonebot-plugin-gachalogs

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/: update-json.py
.github/workflows/: build.yml  publish-test.yml  publish.yml  update.yml
nonebot_plugin_gachalogs/: __init__.py  __meta__.py  data_export.py  data_import.py  data_render.py  data_source.py  gacha_achieve.py  upload_cos.py
resources/gachalogs/: htmlTpl.html
