[tool.poetry]
name = "nonebot-plugin-gachalogs"
version = "0.2.10"
description = "Genshin gacha history analysis plugin for NoneBot2"
authors = ["monsterxcn <monsterxcn@gmail.com>"]
documentation = "https://github.com/monsterxcn/nonebot-plugin-gachalogs#readme"
license = "MIT"
homepage = "https://github.com/monsterxcn/nonebot-plugin-gachalogs"
readme = "README.md"
keywords = ["nonebot", "nonebot2", "genshin", "gacha"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
nonebot2 = ">=2.0.0a16"
nonebot-adapter-onebot = ">=2.0.0b1"
httpx = ">=0.20.0, <1.0.0"
matplotlib = ">=3.5.1"
xlsxwriter = ">=3.0.2"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"
isort = "^5.12.0"
pre-commit = "^3.0.4"
pycln = "^2.1.3"
pyupgrade = "^3.3.1"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.flake8]
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".venv",
]
max-line-length = 88
# W292: No newline at end of file
# W391: Blank line at end of file
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
ignore = ["W292", "W391", "W503", "E203"]

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."
all = false

[tool.pyright]
reportShadowedImports = false
pythonVersion = "3.8"
pythonPlatform = "All"
executionEnvironments = [
  { root = "./tests", extraPaths = ["./"] },
  { root = "./" },
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
